# Mobile_spec_chatbot

./: format.py
my-product-rag-app/: Dockerfile  README.md  analysis.ipynb  docker-compose.yml  format.py  pyproject.toml  requirements.txt
my-product-rag-app/app/: main.py
my-product-rag-app/app/api/: routes.py
my-product-rag-app/app/core/: config.py
my-product-rag-app/app/services/: cache_service.py  embedding.py  mongo_service.py  rag_service.py
my-product-rag-app/scripts/: feature_engineering.py  ingest_data.py  rebuild_index.py
my-product-rag-app/tests/: test_rag.py
